frontend/src/components/AlbumsAll/GetAlbum.css
.album-tiles {
    /* width: 150px;
    height: 150px; */
    border-radius: 3px;
    background-size: contain;
    list-style-type: none;
    padding: 0px 9px;

}

.allAlbum-container {
    display: flex;
    height: 300px;
    width: 100%;
    flex-direction: column;

}

.album-list {
    display: flex;
    justify-content: 'center';
    align-items: center;
}

.album-container {
    overflow-x: auto;
    height: 280px;
    overflow-y: hidden;
}

.allSAtitles {
    font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
    font-size: 24px;
    font-weight: 100;
    color: #333;
}

ul {
    margin: 0px;
    padding: 0px;
}

